--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,12 +107,19 @@ h2 {
 	list-style: none;
 
 	padding-left: 65px;
+	padding-right: 65px;
 }
 
 li {
 	display: flex;
 	flex-direction: row;
 	gap: 20px;
+	margin-bottom: 5px;
+}
+
+li > p {
+	word-break:break-all;
+	white-space: normal;
 }
 
 #clear-button {
